# MedGuard-Agent

./: .env.example  .gitignore  DESIGN.md  DEVELOPMENT_LOG.md  LICENSE  PRODUCT.md  README.md  Testcasesfeedback.txt  prescription_eval_results.md  pyproject.toml  summary
data/: prescription_eval_results.json
docs/: ADR_SPEC.md  DEMO_RUNBOOK.md  FAERS_DATA_PREP.md  NEO4J_IMPORT_RUNBOOK.md  PR_PLAN.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  labels.ts  types.ts
pharmagent/: __init__.py  config.py  logging_config.py  runtime_config.py
pharmagent/adr/: __init__.py  causality.py  chat.py  demo_data.py  evidence.py  extractor.py  faers_cache.py  graph_builder.py  interaction_evidence.py  neo4j_graph.py  openfda.py  pdf_report.py  polypharmacy.py  report.py  research.py  schemas.py  side_effect_data.py  side_effect_rag.py  sider_index.py  workflow.py
pharmagent/agent/: graph.py  llm.py  nodes.py  state.py
pharmagent/api/: __init__.py  main.py
pharmagent/core/: bm25_store.py  document_grader.py  embeddings.py  hallucination_checker.py  hybrid_retriever.py  query_rewriter.py  safety_guardrails.py  schemas.py  synthesizer.py  vectorstore.py
pharmagent/evaluation/: golden_set.py  prescription_eval.py  prescription_golden_set.py  run_eval.py
pharmagent/ingestion/: build_index.py  chunker.py  (+2 more)
scripts/: build_faers_cache.py  build_side_effect_rag.py  build_sider_meddra_index.py  enrich_pubmed.py  ingest_demo.py
tests/: run_tricky_tests.py
(+37 files in other folders)
