[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medguard-agent"
version = "0.2.0"
description = "MedGuard-Agent: evidence-constrained clinical prescription review agent (extended from PharmAgent)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "datasets>=2.20",
    "streamlit>=1.38",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.20",
    "reportlab>=4.2",
    "pypdf>=5.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2",
    "deepeval>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["pharmagent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
